--- a/indexCSS.css
+++ b/indexCSS.css
@@ -16,7 +16,7 @@ nav
 #main-content img
 {
     animation-name: fadeIn;
-    animation-duration: 2.5s;
+    animation-duration: 3s;
     animation-timing-function:ease-in-out;
     animation-fill-mode: forwards;
     box-shadow: 0 0 20px 1px rgba(0,0,0,1);
@@ -61,13 +61,14 @@ nav
     0%
     {
         color: black;
-        letter-spacing: -0.5em;
+        letter-spacing: -0.2em;
+        color: transparent;
     }
-    50%
+    /*50%
     {
         color: transparent;
         letter-spacing: 0.1em;
-    }
+    }*/
     100%
     {
         color: black;
@@ -80,6 +81,10 @@ nav
     {
         width: 100px;
         margin: 30vh auto 0;
+    }
+    #title
+    {
+        font-size: 1.75em;
     }
 }
 .eachCard
