--- a/styles/indexCSS.css
+++ b/styles/indexCSS.css
@@ -9,7 +9,7 @@ nav
 }
 #main-content
 {
-    background-image: url('./penPaper-min.webp');
+    background-image: url('../images/penPaper-min.webp');
     height: 100vh;
     background-size: cover;
 }
@@ -34,7 +34,7 @@ nav
 #aboutMe
 {
     background-color: red;
-    background-image: url('aboutMeBack-min.webp');
+    background-image: url('../images/aboutMeBack-min.webp');
     background-position: center;
     height: 150vh;
     color: white;
@@ -260,7 +260,7 @@ nav
     padding: 2%;
     box-shadow: 0 10px 15px 0.5px white;
     border-radius: 2em;
-    background-image: url('./kali-min.webp');
+    background-image: url('../images/kali-min.webp');
     background-size: contain;
     background-position: left;
     
@@ -335,7 +335,7 @@ ul li a i {
 /*For the container of terminal start*/
 .matrix
 {
-    background-image: url('./matrix.webp'); 
+    background-image: url('../images/matrix.webp'); 
     position: relative; 
     margin-top: 10%; 
     height: 200vh;
